controle de progresso adicionado
