# lib/models/progress-model.js
@@ -33,15 +33,14 @@ var __importStar = (this && this.__importStar) || (function () {
     };
 })();
 Object.defineProperty(exports, "__esModule", { value: true });
-exports.Course = void 0;
+exports.Progress = void 0;
 const mongoose_1 = __importStar(require("mongoose"));
-const coursoSchema = new mongoose_1.Schema({
-    title: { type: String, required: true },
-    description: { type: String, required: true },
-    price: { type: String, required: true },
-    modules: [{ type: mongoose_1.default.Schema.Types.ObjectId, ref: 'Module' }],
-    lifetime: { type: Boolean, default: false },
-    premium: { type: Boolean, default: false },
-}, { timestamps: true });
-exports.Course = mongoose_1.default.model('Course', coursoSchema);
-//# sourceMappingURL=course-model.js.map
+const progressSchema = new mongoose_1.Schema({
+    user: { type: mongoose_1.Schema.Types.ObjectId, ref: 'User', required: true },
+    course: { type: mongoose_1.Schema.Types.ObjectId, ref: 'Course', required: true },
+    completedModule: [{ type: mongoose_1.Schema.Types.ObjectId, ref: 'Module' }],
+    completedVideos: [{ type: mongoose_1.Schema.Types.ObjectId, ref: 'Video' }],
+    lastAccessedAt: { type: Date, default: Date.now },
+});
+exports.Progress = mongoose_1.default.model('Progress', progressSchema);
+//# sourceMappingURL=progress-model.js.map
